# OPC_CEO

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  MAINTENANCE.md  README.md  README_EN.md  add.py  calculate.py  cc-connect.config.toml  next.config.ts  package-lock.json  package.json  result.json  server.ts  test-env.ts  test-xueqiu.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts  单 skill
.agents/: rules.md
.agents/rules/: agent.md
.agents/workflows/: ai_bigevent.md  ai_digest.md  architect-author.md  architecture-reviewer.md  autonomous-dev.md  dev-delivery-reviewer.md  dev-worker.md  integration-tester.md  (+13 more)
.department/: config.json
artifactDir/: result.json
delivery/: ceo-memo-context-and-scheduler.md  delivery-packet.json  implementation-summary.md  test-results.md  work-packages.json
docs/: AGENT_USER_GUIDE.md  CLI_API_REFERENCE.md  IDE_CUSTOM_INSTRUCTIONS.md  OPC_next.md  PROJECT_PROGRESS.md  README.md  REMOTE_ACCESS.md  bug.md  claude-code-frontend-needs.md  claude-engine-gap-analysis.md  code-reuse-strategy.md  doc-maintenance.md  doc-methodology.md  frontend-gap-analysis.md  memory-system-fusion-plan.md  multi-agent-redundancy-report.md  opc-interaction-design-v2.md  permission-system-research.md  template-vs-group-analysis.md  user-journey-gaps.md
scripts/: ag-migrate.sh  ag-wechat.ts  ag.ts  antigravity-acp.ts  migrate-inline-templates.ts  migrate-storage-to-sqlite.ts  run-local-services.mjs
src/: proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1112 files in other folders)
